--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 
-title: [An Introduction to Kirstin Gerrand]
-description: [This website briefly outlines some of my coding achievements across my career so far.]
+title: [Kirstin's Homepage]
+description: [This website showcases some of my coding projects!]
